<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.Ngaos.AppWidgetContainer">
    <LinearLayout
        android:id="@+id/section_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textAlignment="center"
        android:gravity="center">
        <TextView
            android:layout_marginTop="4dp"
            android:id="@+id/txt_sholat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magrib"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/txt_waktu_solat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:text="@string/_18_07"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location_green" />
            <TextView
                android:id="@+id/txt_location"
                android:text="@string/pilih_lokasi"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>